# gst-plugins-imx8

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README.md  RELEASE  REQUIREMENTS  autogen.sh  configure.ac  gst-plugins-imx8.doap
docs/: Makefile.am  version.entities.in
docs/plugins/: .gitignore  Makefile.am  gst-plugins-imx8-plugins-docs.sgml
pkgconfig/: Makefile.am  gstreamer-plugins-imx8-uninstalled.pc.in
po/: Makevars
sys/: Makefile.am
sys/g2d/: Makefile.am  gstg2d.c
tests/: Makefile.am
tests/check/: Makefile.am
tests/check/generic/: states.c
tests/examples/: Makefile.am
