plugin_LTLIBRARIES = libgstimx8g2d.la

libgstimx8g2d_la_SOURCES = gstg2d.c

libgstimx8g2d_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
libgstimx8g2d_la_LIBADD = \
	$(GST_PLUGINS_BASE_LIBS) \
	$(GST_BASE_LIBS) \
	$(GST_LIBS)
libgstimx8g2d_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

noinst_HEADERS = 
